--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "This package will allow the user to download excel from the array.",
     "type": "library",
     "require": {
-        "maatwebsite/excel": "3.0",
-        "phpunit/phpunit": "8.5.x-dev"
+        "maatwebsite/excel": "3.0"
     },
     "license": "MIT",
     "authors": [
@@ -13,5 +12,8 @@
             "email": "aks21117@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "require-dev": {
+        "phpunit/phpunit": "8.5.x-dev"
+    }
 }
